--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,33 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.gowhich.androidbutton_2.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:drawableTop="@drawable/face1" android:text="按钮1"/>
+    <Button
+        android:layout_below="@+id/button1"
+        android:id="@+id/button2"
+        android:text="按钮2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:drawableTop="@drawable/face2" android:drawablePadding="30dp"/>
+    <Button
+        android:layout_below="@+id/button2"
+        android:id="@+id/button3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:drawableTop="@drawable/face3" android:drawableLeft="@drawable/face4"
+        android:text="按钮3"/>
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_below="@+id/button3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:drawableRight="@drawable/face4" android:drawablePadding="30dp"
+        android:text="按钮4"/>
+
+    <Button
+        android:layout_below="@+id/button4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:id="@+id/button" android:layout_marginTop="10dp" />
+
 </RelativeLayout>
